[IO] Try to fix errors

--- a/io/quickjquery/index.html
+++ b/io/quickjquery/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="row" style="text-align:center; padding-top: 80px;">
                 <button onclick="chrome.webstore.install()" style="margin-bottom: 90px; font-size: 22px;">
-                    <img src="/img/google-chrome-logo.png" style="width: 30px; margin-right: 8px; margin-bottom: 2px;">Install <b>Quick jQuery integration</b></button>
+                    <img src="/img/google-chrome-logo.png" style="width: 30px; margin-right: 8px; margin-bottom: 2px;">Add to Chrome</button>
                 <p>Simple Chrome extension which let you integrate jQuery 3.2.1 in every frame of your active tab, by 1 click.</p>
             </div>
         </div>
