--- a/io/index.html
+++ b/io/index.html
@@ -66,14 +66,14 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="./quickjquery" class="portfolio-link">
+                    <a href="./quickjs" class="portfolio-link">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
                         <img id="imgModal1" src="/img/jquery-logo.gif" class="img-responsive" alt="Cabin">
-                        <h1>Quick jQuery integration</h1>
+                        <h1>Quick JS</h1>
                     </a>
                 </div>
             </div>
@@ -85,7 +85,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; thomasc.pro 2016
+                        Copyright &copy; thomasc.pro 2017
                     </div>
                 </div>
             </div>
