--- a/io/index.html
+++ b/io/index.html
@@ -22,6 +22,12 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style>
+.col-sm-4.portfolio-item img{
+    width: 200px;
+    margin: auto;
+}
+</style>
 </head> 
 <body id="page-top" class="index">
     <div id="skipnav"><a href="#maincontent">Aller au contenu principal</a></div>
@@ -62,7 +68,7 @@
                             </div>
                         </div>
                         <img id="imgModal1" src="/img/url.svg" class="img-responsive" alt="Cabin">
-                        <h1>URL Encoder / Decoder</h1>
+                        <h2>URL Encoder / Decoder</h2>
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -72,8 +78,8 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img id="imgModal1" src="/img/jquery-logo.gif" class="img-responsive" alt="Cabin">
-                        <h1>Quick JS</h1>
+                        <img id="imgModal1" src="/img/quickjs-logo512.png" class="img-responsive" alt="Cabin">
+                        <h2>Quick JS</h2>
                     </a>
                 </div>
             </div>
