--- a/io/index.html
+++ b/io/index.html
@@ -23,7 +23,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
-.col-sm-4.portfolio-item img{
+#imgModal1, #imgModal2, #imgModal3, .col-sm-4.portfolio-item img{
     width: 200px;
     margin: auto;
 }
@@ -78,7 +78,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img id="imgModal1" src="/img/quickjs-logo512.png" class="img-responsive" alt="Cabin">
+                        <img id="imgModal2" src="/img/quickjs-logo512.png" class="img-responsive" alt="Cabin">
                         <h2>Quick JS</h2>
                     </a>
                 </div>
