--- a/applications_mobiles.html
+++ b/applications_mobiles.html
@@ -56,19 +56,22 @@
                             <h3>J'ai de l'expérience en:</h3>
                             <ul class="item-details modal-list">
                                 <li>
-                                    <h4>JAVA</h4>
+                                    <h4>Android<span>(Java, Android Studio)</span></h4>
                                 </li>
+								<li>
+									<h4>Responsive CSS</h4>
+								</li>
                             </ul>
                             <h3>Je suis également intéressé par:</h3>
                             <ul class="item-details modal-list">
                                 <li>
-                                    <h4>C</h4>
+                                    <h4>Android<span>(Kotlin)</span></h4>
                                 </li>
                                 <li>
-                                    <h4>C++</h4>
+                                    <h4>Xamarin</h4>
                                 </li>
                                 <li>
-                                    <h4>C#</h4>
+                                    <h4>iOS<span>(Objective C)</span></h4>
                                 </li>
                             </ul>
                             <a href="index.html#portfolio"><button type="button" class="btn btn-default"><i class="fa fa-times"></i> Fermer</button></a>
