--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p>Suite à la découverte du développement web au lycée avec l'option ISN, je me suis orienté vers l'informatique... J'ai trouvé ma voie! Passionné par plusieurs domaines, j'ai décidé de continuer pour passer mon diplôme d'ingénieur.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Basketteur pendant 5 ans, le sport que j'apprécie par dessus tout est le ski alpin. Côté musique, j'aime tous les genres, mais vive le ROCK <img src="img/rock.png"/>. Côté film, les thrillers avant tout.</p>
+                    <p>Pour l'instant dans la technique à fond, j'espère par la suite évoluer soit vers la gestion de projet/d'équipe, soit vers le métier d'architecte. Et pourquoi pas faire un peu de formation en fin de carrière !</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="doc/CV%20Thomas%20CAILLIER.pdf" class="btn btn-lg btn-outline">
@@ -145,8 +145,6 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                     <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
@@ -205,14 +203,11 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Emploi</h3>
-                        <p>Actuellement chez Polyedre, je suis intéressé pour de l'alternance en école d'ingénieur. N'hésitez pas à <a href="#contact" class="nowrap">&rArr; me contacter</a> !</p>
+                        <p>Actuellement en alternance chez Onecub, j'espère poursuivre l'aventure une fois mes études finies. N'hésitez pas à <a href="#contact" class="nowrap">&rArr; me contacter</a> !</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Sur le web</h3>
                         <ul class="list-inline">
-                            <li>
-                                <a href="https://plus.google.com/u/0/117265766529966773073" class="btn-social btn-outline"><span class="sr-only">Google Plus</span><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
                             <li>
                                 <a href="https://www.linkedin.com/in/thomas-caillier" class="btn-social btn-outline"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-linkedin"></i></a>
                             </li>
@@ -221,9 +216,6 @@
                             </li>
                             <li>
                                 <a href="http://www.doyoubuzz.com/thomas-caillier" class="btn-social btn-outline"><span class="sr-only">Do You Buzz</span><i class="fa fa-fw fa-vcard"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://open.spotify.com/user/thomascaillier" class="btn-social btn-outline"><span class="sr-only">Spotify</span><i class="fa fa-fw fa-spotify"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.wizbii.com/profile/thomas-caillier" class="btn-social btn-outline"><span class="sr-only">Wizbii</span><i class="fa fa-fw fa-google-wallet"></i></a>
@@ -241,7 +233,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; thomasc.pro 2016
+                        Copyright &copy; thomasc.pro 2018
                     </div>
                 </div>
             </div>
