--- a/ingenierie_logicielle.html
+++ b/ingenierie_logicielle.html
@@ -53,6 +53,9 @@
                             <h3>J'ai de l'expérience en:</h3>
                             <ul class="item-details modal-list">
                                 <li>
+                                    <h4>C#<span>ASP .NET</span></h4>
+                                </li>
+                                <li>
                                     <h4>JAVA</h4>
                                 </li>
                                 <li>
@@ -69,9 +72,6 @@
                             <ul class="item-details modal-list">
                                 <li>
                                     <h4>C++</h4>
-                                </li>
-                                <li>
-                                    <h4>C# <span>(déjà des bases)</span></h4>
                                 </li>
                                 <li>
                                     <h4>Ruby</h4>
